Converted Day 9 back to Java 19 level features.